--- a/css/home.css
+++ b/css/home.css
@@ -123,63 +123,38 @@ main {
 }
 
 /* Estilos para tablets */
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
     .header {
         flex-direction: column;
         align-items: center;
-        padding: 1em;
     }
 
-    #btn-grad {
-        margin: 5px;
-        padding: 10px 30px;
+    .dropdown-menu {
+        width: 100%;
+        padding: 12px;
+        font-size: 18px;
     }
 
     .lista {
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Ajusta las columnas para tablets */
+        gap: 1em;
     }
 
     .pelicula-container {
+        width: 90%;
+        box-sizing: border-box;
+    }
+
+    .pelicula-container img {
         width: 100%;
-        max-width: 280px;
-        margin: auto;
+        height: auto;
+    }
+
+    h2 {
+        font-size: 1.75em;
     }
 }
 
-/* Estilos para iPhone 11 */
-@media (max-width: 828px) {
-    .header {
-        padding: 1em;
-    }
-
-    #btn-grad {
-        margin: 5px;
-        padding: 10px 20px;
-    }
-
-    .lista {
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    }
-
-    .pelicula-container {
-        width: 100%;
-        max-width: 250px;
-        margin: auto;
-    }
-
-    .titulo {
-        font-size: 1.2em;
-    }
-
-    .informacion {
-        font-size: 0.8em;
-    }
-
-    #busqueda-input {
-        width: 100%;
-        padding: 10px;
-    }
-}
 
 /* Estilo para el dropdown menu */
 .dropdown-menu {
@@ -199,5 +174,39 @@ main {
     background-color: black;
     color: white;
     font-size: 16px;
+}
+
+/* Estilos generales para pantallas más grandes */
+@media (min-width: 769px) {
+    .header {
+        display: flex;
+        justify-content: space-around;
+        padding: 1em 3em;
+        margin-top: 50px;
+    }
+
+    .dropdown-menu {
+        width: auto;
+        padding: 15px 20px;
+        font-size: 18px;
+    }
+
+    .lista {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 1em;
+    }
+
+    .pelicula-container {
+        width: 300px;
+    }
+
+    .pelicula-container img {
+        width: 299px;
+        height: 444px;
+    }
+
+    h2 {
+        font-size: 2em;
+    }
 }
 
